[package]
name = "yeesh-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
regex = "1.6.0"
filesystem = "0.4.4"

[dev-dependencies]
pretty_assertions = "1.2.1"
derive_more = "0.99.17"
static_assertions = "1.1.0"
lazy_static = "1.4.0"
