[package]
name = "yeesh-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
regex = "1.6.0"
filesystem = "0.4.4"
itertools = "0.10.5"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
derive_more = "0.99.17"
static_assertions = "1.1.0"
temp-env = "0.3.1"
path-absolutize = "3.0.14"